--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -14,6 +14,7 @@ server {
         proxy_pass http://client;
     }
 
+    ## Only on Development
     location /ws {
         proxy_pass http://client;
         proxy_http_version 1.1;
