--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -10,7 +10,7 @@ FROM node:16-alpine as builder
 WORKDIR '/app'
 
 ## Run Commands - Install Dependencies
-COPY package.json .
+COPY ./package.json ./
 RUN npm install
 COPY . .
 RUN npm run build
@@ -20,6 +20,7 @@ RUN npm run build
 #------------------------------------
 ## Base Image
 FROM nginx
+EXPOSE 3000
 COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
 ## Copy the build folder from above phase
 COPY --from=builder /app/build /usr/share/nginx/html
