--- a/client/Dockerfile.dev
+++ b/client/Dockerfile.dev
@@ -7,7 +7,7 @@ FROM node:16-alpine
 WORKDIR '/app'
 
 ## Run Commands - Install Dependencies
-COPY package.json .
+COPY ./package.json ./
 RUN npm install
 COPY . .
 
