--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,30 +1,27 @@
-# NGINX Config - Layer above Client/Server
 upstream client {
-    server client:3000;
+  server client:3000;
 }
 
 upstream api {
-    server api:5000;
+  server api:5000;
 }
 
 server {
-    listen 80;
+  listen 80;
 
-    location / {
-        proxy_pass http://client;
-    }
+  location / {
+    proxy_pass http://client;
+  }
 
-    ## Only on Development
-    location /ws {
-        proxy_pass http://client;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
-    }
+  location /ws {
+      proxy_pass http://client;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "Upgrade";
+  }
 
-    location /api {
-        rewrite /api/(.*) /$1 break; ## Remove "/api" from the route
-        proxy_pass http://api;
-    }
+  location /api {
+    rewrite /api/(.*) /$1 break;
+    proxy_pass http://api;
+  }
 }
-
